--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,16 @@ dependencies {
 //Material
     def supportlibVersion = '1.2.0'
     implementation "com.google.android.material:material:$supportlibVersion"
+
+    // Room and Lifecycle dependencies
+    def room_version = '2.2.5'
+    def lifecycle_version = '2.2.0'
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
+    // Coroutines
+    def coroutine_version = '1.3.9'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 }
